# engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  doc.md
engine/: engine.hpp  main.cpp
include/engine/: global.hpp
include/engine/features/assetm/: anim.hpp  api.hpp  sound.hpp  texture.hpp
include/engine/features/input/: api.hpp
include/engine/features/renderer/: api.hpp  renderer.hpp
include/engine/features/renderer/internal/: glabs.hpp
include/engine/features/sound/: api.hpp  player.hpp
include/engine/helpers/: components.hpp  logger.hpp  taskm.hpp
include/engine/sys/eventh/: api.hpp  eventm.hpp
include/engine/sys/eventh/internal/: storage.hpp
include/engine/sys/taskm/: api.hpp  node.hpp  node_adder.hpp  nodem.hpp
include/game/: game.hpp
include/game/helpers/: vec.hpp
res/: how-to-move.md
src/: main.cpp
src/engine/renderer/: glabs.cpp  renderer.cpp
src/engine/sys/: taskm.cpp
src/game/: game.cpp
